# The following sample does not require any default font engine.
add_subdirectory("bitmapfont")

# Only enable the remaining samples if a default font engine is selected.
if(RMLUI_FONT_ENGINE_ENABLED)
	add_subdirectory("animation")
	add_subdirectory("benchmark")
	add_subdirectory("customlog")
	add_subdirectory("databinding")
	add_subdirectory("demo")
	add_subdirectory("drag")
	add_subdirectory("effects")
	add_subdirectory("loaddocument")
	add_subdirectory("transform")
	add_subdirectory("treeview")

	if(RMLUI_HARFBUZZ_SAMPLE)
		add_subdirectory("harfbuzz")
	else()
		message(STATUS "Harfbuzz sample disabled due to RMLUI_HARFBUZZ_SAMPLE=OFF")
	endif()
	if(RMLUI_LOTTIE_PLUGIN)
		add_subdirectory("lottie")
	else()
		message(STATUS "Lottie sample disabled due to RMLUI_LOTTIE_PLUGIN=OFF")
	endif()
	if(RMLUI_SVG_PLUGIN)
		add_subdirectory("svg")
	else()
		message(STATUS "SVG sample disabled due to RMLUI_SVG_PLUGIN=OFF")
	endif()

	# Enable the IME sample only for Windows backends; no other platform backend is currently supported.
	if(RMLUI_BACKEND MATCHES "^Win32")
		add_subdirectory("ime")
	else()
		message(STATUS "IME sample disabled due to RMLUI_BACKEND not being prefixed by Win32")
	endif()
endif()
